<resources>
    <string name="app_name">Homework Tracking App</string>
    <string name="etUserName_hint">User Name</string>
    <string name="etPassword_hint">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="btnNameHint">Name</string>
    <string name="etEmail">Email</string>
    <string name="etReenterPassword">Re-Enter Password</string>
    <string name="Preffered_time">OPTİON</string>
    <string name="Preffered_time8">Student</string>
    <string name="Preffered_time24">Teacher</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btnClear">Clear</string>
    <string name="btnRegister">Register</string>
    <string name="Back">Back</string>
    <string name="btnStudentAdd">Add</string>
    <string name="tvAd">Name</string>
    <string name="tvSoyad">Surname</string>
    <string name="tvdepartment">Department</string>
    <string name="studentname">Name</string>
    <string name="studentsurname">Surname</string>
    <string name="studentdepart">Departmant</string>
    <string name="btninsert">Insert</string>
    <string name="btndelete">Delete</string>
    <string name="btnupdate">Update</string>
    <string name="btnview">View</string>
    <string name="btnlessonadd">ADD</string>

    <string-array name="SCHOOL">
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High-School</item>
        <item>University</item>
    </string-array>
</resources>