<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvAd"
        android:layout_width="165dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvAd"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSoyad"
        android:layout_width="168dp"
        android:layout_height="23dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvSoyad"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/tvAd" />

    <TextView
        android:id="@+id/tvDepartment"
        android:layout_width="168dp"
        android:layout_height="27dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/tvdepartment"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/tvSoyad" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="11dp"
        android:text="@string/btnStudentAdd"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/tvDepartment" />
</androidx.constraintlayout.widget.ConstraintLayout>