<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="570dp"
        android:gravity="center_horizontal"
        android:text="Welcome to Homework App"
        android:textColor="#95442A"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="454dp"
        android:ems="10"
        android:hint="@string/etUserName_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="136dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="271dp"
        android:layout_marginRight="271dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/btn"
        android:onClick="Login"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/etPassword_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <Button
        android:id="@+id/btnsign"
        android:layout_width="133dp"
        android:layout_height="67dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/btn"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textmessage"
        android:layout_width="314dp"
        android:layout_height="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="41dp"
        android:textColor="#803030"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>